Remove conflicting header selector to fix alignment

--- a/style.css
+++ b/style.css
@@ -5,11 +5,12 @@ header {
   z-index: 100;
 }
 
-header > * {
+.header-container {
   max-width: 800px;
   margin: 0 auto;
   padding: 20px 20px 0;
 }
+
 
 header p {
   margin-bottom: 20px;
@@ -62,9 +63,4 @@ a:hover {
   text-decoration: underline;
 }
 
-.header-container {
-  max-width: 800px;
-  margin: 0 auto;
-  padding: 20px 20px 0;
-}
 
